sumo/tests/netgen/errors/multiple_types/spider_and_random/options.netgen
--spider-net --random-net --grid-number=10 --grid-length=400 --output-file=net.net.xml
